--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-       <title>Project Name</title>
+       <title>Project AURA</title>
        <link rel="stylesheet" href="css/style.css"/>
 	   <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
        <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
@@ -43,11 +43,10 @@ $(document).ready(function() {
  </head> 
 	
 <body>
-
-<!----- HEADER START--->   
+  
 <header id="header">
 <div class="content">
-<div id="logo"><a href=""> Project Name </a></div>
+<div id="logo"><a href=""> Project AURA </a></div>
 
 <nav id="nav">
 	<ul>
@@ -59,15 +58,14 @@ $(document).ready(function() {
 </nav>
 </div>
 </header>	
-<!----- HEADER END--->   
 
-<!----- SLIDES START --->   	
+  	
 	<div id="slide1">
 		<div class="content">
-			<br>
+			<br><br><br>
 			<div class="quotes_container">
-	            <h2>WHAT IS "..."?</h2>
-			     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non nibh non erat sodales rhoncus. Sed tristique elit rhoncus congue dictum. Nullam dolor neque, luctus et felis feugiat, pretium pulvinar mauris. Fusce vitae nisi condimentum, gravida massa nec, eleifend augue. Nunc ut porta eros. Donec vestibulum elit varius massa iaculis. </h3>
+	            <h2>A Location-based Chat Engine</h2>
+			     <h3>...to communicate people around you anonymously</h3>
 			</div> 
 		</div> 
     </div> 
@@ -75,7 +73,8 @@ $(document).ready(function() {
 	<div id="slide2">
 		<div class="content" >
             <div class="quotes_container">
-		    <h3 class="quotes">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non nibh non erat sodales rhoncus. Sed tristique elit rhoncus congue dictum. Nullam dolor neque, luctus et felis feugiat, pretium pulvinar mauris. Fusce vitae nisi condimentum, gravida massa nec, eleifend augue. Nunc ut porta eros. Donec vestibulum elit varius massa iaculis.</h3>
+		    <h3 class="quotes">The user sees the area in his/her mobile phone as a 3D virtual chat room. Users are placed on a virtual ground with an icon and their auras. The user can change his/her auracolor, can type a message and send others some special kind of requests like mini games.
+		    </h3>
 			</div> 
 		</div> 
     </div> 
@@ -85,11 +84,11 @@ $(document).ready(function() {
 		<div class="content">
 			   <div class="quotes_container">
 			   	<table><td>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Arda Burak Ekmekçi </h4><br><br><br><br>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Ayberk Aksoy </h4></td><td>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Ekin Karayalçın </h4><br><br><br><br>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Merve Tuncel </h4></td><td>
-		      <img src="img/norman.png" align="left"/> <h4 class="author_name_white">Seren Erdoğan </h4>
+		      <img src="img/1.png" align="left"/> <h4 class="author_name_white">Arda Burak Ekmekçi </h4><br><br><br><br>
+		      <img src="img/2.png" align="left"/> <h4 class="author_name_white">Ayberk Aksoy </h4></td><td>
+		      <img src="img/3.png" align="left"/> <h4 class="author_name_white">Ekin Karayalçın </h4><br><br><br><br>
+		      <img src="img/4.png" align="left"/> <h4 class="author_name_white">Merve Tuncel </h4></td><td>
+		      <img src="img/5.png" align="left"/> <h4 class="author_name_white">Seren Erdoğan </h4>
 		      </td>
 		      </table>
 		    </div> 
@@ -98,10 +97,14 @@ $(document).ready(function() {
 	
 	
 	<div id="slide4">
-		<div class="content">
-              <div class="quotes_container">
-		    <h3 class="quotes">“Christmas doesn't come from a store, maybe Christmas perhaps means a little bit more....” </h3>
-		  <img src="img/dr-seuss.png" align="left"/> <h4 class="author_name_gray">Dr. Seuss </h4>
+		<div class="content" >
+		<div class="quotes_container">
+		    <h3 class="quotes"><a href="">Project Specification Report</a>
+		    <h3 class="quotes"><a href="">Analysis Report</a>
+		    <h3 class="quotes"><a href="">High-Level Design Report</a>
+		    <h3 class="quotes"><a href="">Low-Level Design Report</a>
+		    <h3 class="quotes"><a href="">Final Report</a>
+		</div> 
 		</div> 
 		</div> 
     </div> 
