--- a/index.html
+++ b/index.html
@@ -83,14 +83,12 @@ $(document).ready(function() {
    <div id="slide3">
 		<div class="content">
 			   <div class="quotes_container">
-			   	<table><td>
-		      <img src="img/1.png" align="left"/> <h4 class="author_name_white">Arda Burak Ekmekçi </h4><br><br><br><br>
-		      <img src="img/2.png" align="left"/> <h4 class="author_name_white">Ayberk Aksoy </h4></td><td>
-		      <img src="img/3.png" align="left"/> <h4 class="author_name_white">Ekin Karayalçın </h4><br><br><br><br>
-		      <img src="img/4.png" align="left"/> <h4 class="author_name_white">Merve Tuncel </h4></td><td>
-		      <img src="img/5.png" align="left"/> <h4 class="author_name_white">Seren Erdoğan </h4>
-		      </td>
-		      </table>
+		      <h4 class="author_name_white">Arda Burak Ekmekçi </h4>
+		      <h4 class="author_name_white">Ayberk Aksoy </h4>
+		      <h4 class="author_name_white">Ekin Karayalçın </h4>
+		      <h4 class="author_name_white">Merve Tuncel </h4>
+		      <h4 class="author_name_white">Seren Erdoğan </h4>
+		</table>
 		    </div> 
 		</div> 
     </div> 
@@ -98,7 +96,7 @@ $(document).ready(function() {
 	
 	<div id="slide4">
 		<div class="content" >
-		<div class="quotes_container">
+		<div class="quotes_container"><br><br><br>
 		    <h3 class="quotes"><a href="">Project Specification Report</a>
 		    <h3 class="quotes"><a href="">Analysis Report</a>
 		    <h3 class="quotes"><a href="">High-Level Design Report</a>
@@ -115,7 +113,8 @@ $(document).ready(function() {
 		    <article id="contact" class="container 75%">
 					<header>
 						<h2>Contact with us</h2>
-						<p>We are open to suggestions or comments for improving any aspect of our application.</p>
+						<h3>We are open to suggestions or comments for improving any aspect of our application.</h3>
+						<br>
 					</header>
 					<div>
 						<div class="row">
@@ -152,11 +151,7 @@ $(document).ready(function() {
 								</form>
 		  </div>  
 		</div> 
-		
-
     </div> 
-	
-<!----- SLIDES END --->
 
 </body>
 </html>
