--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $(document).ready(function() {
            <div class="quotes_container">
 		    <article id="contact" class="container 75%">
 					<header>
-						<h2>Contact with us</h2>
+						<h2>Contact us</h2>
 						<h3>We are open to suggestions or comments for improving any aspect of our application.</h3>
 						<br>
 					</header>
