--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(document).ready(function() {
 	<div id="slide4">
 		<div class="content" >
 		<div class="quotes_container"><br><br><br>
-		    <h3 class="quotes"><a href="">Project Specification Report</a>
+		    <h3 class="quotes"><a target="_blank" href="docs/ps.pdf">Project Specification Report</a>
 		    <h3 class="quotes"><a target="_blank" href="docs/analysis.pdf">Analysis Report</a>
 		    <h3 class="quotes"><a href="">High-Level Design Report</a>
 		    <h3 class="quotes"><a href="">Low-Level Design Report</a>
